RESOLVED FIXED24780
Fix only failing JSCore test on wx build bot.
https://bugs.webkit.org/show_bug.cgi?id=24780
Summary Fix only failing JSCore test on wx build bot.
Kevin Ollivier
Reported 2009-03-24 12:04:46 PDT
Define HAVE_LANGINFO_H so we can get support for it and fix the failing test for the build bot. Changed as discussed on webkit-dev. (I hope to look at the CF stuff some time, but we currently don't even define PLATFORM(CF) so it would be a more involved fix.)
Attachments
Fix for test failure (904 bytes, patch)
2009-03-24 12:06 PDT, Kevin Ollivier
darin: review+
Kevin Ollivier
Comment 1 2009-03-24 12:06:13 PDT
Created attachment 28895 [details] Fix for test failure
Darin Adler
Comment 2 2009-03-24 12:24:07 PDT
Comment on attachment 28895 [details] Fix for test failure r=me
Kevin Ollivier
Comment 3 2009-03-24 12:53:10 PDT
Landed in r41946, thanks!
Note You need to log in before you can comment on or make changes to this bug.