Reviewed by Darin Adler.

Explicitly define HAVE_LANGINFO_H on Darwin. Fixes the wx build bot jscore
test failure.

https://bugs.webkit.org/show_bug.cgi?id=24780


Canonical link: https://commits.webkit.org/34003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41946 268f45cc-cd09-0410-ab3c-d52691b4dbfc